IRepository File inherited to all user

--- a/EasyLearn/appsettings.Development.json
+++ b/EasyLearn/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnRDBMS;Uid=root;Pwd=1234"
   }
 }
