--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -7,11 +7,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Folder Include="Models\DTOs\CategoryDTOs" />
+		<Folder Include="Models\DTOs\CourseDTOs" />
+		<Folder Include="Models\DTOs\InstructorDTOs" />
+		<Folder Include="Models\DTOs\ModeratorDTOs" />
+		<Folder Include="Models\DTOs\StudentDTOs" />
 		<Folder Include="Models\Enums\" />
 		<Folder Include="Models\DTOs\" />
 		<Folder Include="Models\ViewModels\" />
-		<Folder Include="Repositories\Implimentations\" />
-		<Folder Include="Services\Implimentations\" />
+		<Folder Include="Repositories\Implementations\" />
+		<Folder Include="Services\Implementations\" />
 		<Folder Include="Services\Interfaces\" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
@@ -19,6 +24,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
 	</ItemGroup>
 
