done with x.paginatedlist

--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="Views\Admin\CreateC.cshtml~RF4cc05c7.TMP" />
+		<None Remove="Views\Admin\CreateC.cshtml~RF4cc05c7.TMP" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -27,6 +27,8 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+		<PackageReference Include="X.PagedList" Version="8.4.7" />
+		<PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.7" />
 	</ItemGroup>
 
 	<ItemGroup>
