--- a/EasyLearn/appsettings.Development.json
+++ b/EasyLearn/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnRDBMS;Uid=root;Pwd=1234"
+    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearningRDBMS;Uid=root;Pwd=1234"
   }
 }
