--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -38,4 +38,8 @@
 		<_ContentIncludedByDefault Remove="Pages\Student\Index.cshtml" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="GateWays\FileManager\" />
+	</ItemGroup>
+
 </Project>
