done with firts enrolment

--- a/EasyLearn/appsettings.Development.json
+++ b/EasyLearn/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnRDBMS;Uid=root;Pwd=1234"
+  },
+  "Paystack": {
+    "APIKey": "sk_test_c19e12866e49a5f161381926540f17355d76f6fc"
   }
 }
