Fixed courses trying video tiem out

--- a/EasyLearn/appsettings.Development.json
+++ b/EasyLearn/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnRDBMS;Uid=root;Pwd=1234"
+    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnMYSQL;Uid=root;Pwd=1234"
   },
   "Paystack": {
     "APIKey": "sk_test_90edbf3aeb4287931bf4934b14f85c7c8af498c1"
@@ -19,7 +19,7 @@
   "CompanyInfo": {
     "CompanyName": "EasyLearn Edu",
     "CompanyEmail": "aymoneyay@gmail.com",
-    "AdminUserId": "f4b76242-aa4f-4353-aab5-26221879dab9",
-    "AdminId": "c20cc11c-8bbe-43d3-afed-10d78fcd0bcc"
+    "AdminUserId": "USERID53D4EB9E1C5144A4A01225C98042E32A",
+    "AdminId": "ADMINID8726B43F83F44586AF5DDF9DFF91ADBD"
   }
 }
