--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -25,7 +25,6 @@
 	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
 		<PackageReference Include="MediaInfo.DotNetWrapper" Version="1.0.7" />
-		<PackageReference Include="MediaWrapper" Version="1.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.15" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.15">
@@ -36,6 +35,7 @@
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
 		<PackageReference Include="sib_api_v3_sdk" Version="4.0.2" />
+		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 		<PackageReference Include="X.PagedList" Version="8.4.7" />
 		<PackageReference Include="X.PagedList.Mvc.Core;" Version="8.4.7" />
 	</ItemGroup>
