--- a/EasyLearn/appsettings.Development.json
+++ b/EasyLearn/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=EasyLearnMYSQL;Uid=root;Pwd=1234"
+    "EasyLearnDbConnectionString": "Server=localhost;port=3306;Database=ATestDB;Uid=root;Pwd=1234"
   },
   "Paystack": {
     "APIKey": "sk_test_90edbf3aeb4287931bf4934b14f85c7c8af498c1"
