--- a/EasyLearn/EasyLearn.csproj
+++ b/EasyLearn/EasyLearn.csproj
@@ -24,7 +24,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
-		<PackageReference Include="MediaInfo.DotNetWrapper" Version="1.0.7" />
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.15" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.15">
